# notification-microservice

./: Dockerfile  docker-compose.yml  pyproject.toml  replica.key  requirements.txt
app/: config.py  constants.py  main.py
app/services/: consume_service.py
