[tool.poetry]
name = "notification-microservice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aio-pika = "^9.4.0"
motor = "^3.3.2"
pydantic = "^2.6.2"
pydantic-settings = "^2.2.1"
boto3 = "^1.34.51"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
